--- a/client/src/components/StickySections/StickySections.css
+++ b/client/src/components/StickySections/StickySections.css
@@ -36,7 +36,7 @@
 .cards-stack {
   position: relative;
   width: 100%;
-  height: 620px; 
+height: 700px;
   min-height: unset;
   
 }
